--- a/ArtistfyTF/src/main/resources/application.properties
+++ b/ArtistfyTF/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Datasource
+spring.jpa.database=POSTGRESQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/artistfytf
+spring.datasource.username=postgres
+spring.datasource.password=root
 
+#Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#Hibernate ddl(create, update, none)
+spring.jpa.hibernate.ddl-auto=create
