--- a/ArtistfyTF/src/main/resources/application.properties
+++ b/ArtistfyTF/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=root
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #Hibernate ddl(create, update, none)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
