--- a/ArtistfyTF/src/main/resources/application.properties
+++ b/ArtistfyTF/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #Hibernate ddl(create, update, none)
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
